# learn-opengl

./: .gitignore  AGENTS.md  README.md  依赖安装.md  编译.md
01-Windows/: CMakeLists.txt  编译
02-GDI/: CMakeLists.txt  main.cpp
02-GDI/.cache/clangd/index/: application.cpp.E91AC51E6DEB4903.idx  base.h.3775F1DE3D74D0A3.idx  base.h.EF837E8AB9858259.idx  frameBuffer.cpp.14144F856AA0B77F.idx  frameBuffer.cpp.6987B28CA0FB3A08.idx  gpu.cpp.11098E7DB678FB88.idx  gpu.cpp.1D12B117950456FF.idx  gpu.h.62B7FC3870BFD4D4.idx  gpu.h.8D4094F098794B73.idx  main.cpp.231FBC4E749A9AA7.idx  main.cpp.28881045F6EA749F.idx  slint.h.9AB78507DA583A9D.idx  slint_brush_internal.h.DA0BDDBD63E43776.idx  slint_builtin_structs.h.0A57D56A65969E03.idx  slint_builtin_structs_internal.h.732CA6D145B0AD2E.idx  slint_callbacks.h.3FA41CA049A51BA0.idx  slint_color.h.8B6BF80515C5364A.idx  slint_config.h.E267C45BBE863719.idx  slint_enums_internal.h.39ECDCC5A08A32A1.idx  slint_generated_public.h.59F2C33FD8BCA8C6.idx  slint_image_internal.h.8B022EB89DE71D21.idx  slint_internal.h.1FC2095DC7FBA010.idx  slint_item_tree.h.3E3F235053F0ABFE.idx  slint_models.h.17EC3AE22DBCCCFD.idx  slint_pathdata.h.32AC0BA0C8A3969F.idx  slint_pathdata_internal.h.65DA1B99D4D9B294.idx  slint_platform_internal.h.1A54A97E3896E9AF.idx  slint_point.h.2071CC1D85758BD2.idx  slint_properties.h.60D795B41FD7427A.idx  slint_properties_internal.h.5D46521409971099.idx  slint_sharedvector_internal.h.D5483AEF22290260.idx  slint_size.h.64151EA4632253DC.idx  slint_string.h.0FF780FCCA01EB36.idx  slint_timer.h.AC7E5D405C8253A5.idx  slint_window.h.1C4C04FEA0ECB3DB.idx
02-GDI/application/: application.cpp  application.h
02-GDI/gpu/: frameBuffer.cpp  gpu.cpp  gpu.h
02-GDI/qml/: main.qml
02-GDI/ui/: main.slint
03-Lines/: CMakeLists.txt  canvasprovider.cpp  canvasprovider.h  main.cpp
03-Lines/.cache/clangd/index/: application.cpp.E86D3A8874796BC9.idx  application.h.B8804AB69464912B.idx  base.h.2BBF54C6EAEBAB16.idx  frameBuffer.cpp.88C4F55A6791AE18.idx  gpu.cpp.8FBA00974052FE00.idx  main.cpp.0783FABC8CFEDDB5.idx  slint.h.5FD2ACA07DCDA976.idx  slint_brush.h.CB1094AF16145B07.idx  slint_brush_internal.h.C9BE45BA5AD6C692.idx  slint_builtin_structs.h.FC4C29EEAB9D2337.idx  slint_callbacks.h.F6353314CA313A50.idx  slint_events_internal.h.EB395B4B8D8547AC.idx  slint_generated_public.h.D5C857CAF1CB2A85.idx  slint_image_internal.h.76769AE72AFE299A.idx  slint_item_tree.h.BE3139B8059048FD.idx  slint_string.h.8FEA5E3BCDAC004C.idx  slint_string_internal.h.8758B7D810588B5F.idx  slint_timer_internal.h.F8A384567CBD9227.idx  slint_window.h.0CA82A2345190F27.idx  vtable.h.4AD0B46F5053F0A4.idx
03-Lines/global/: base.h
03-Lines/gpu/: frameBuffer.cpp  gpu.cpp  gpu.h  raster.cpp  raster.h
03-Lines/qml/: Main.qml
03-Lines/ui/: main.slint
08-Bilinear/: CMakeLists.txt
08-Bilinear/.cache/clangd/index/: application.cpp.1DC280AFA6E93854.idx  application.h.9F8747CD759121ED.idx  frameBuffer.h.92F6C3A05A58BD34.idx  gpu.h.4F4A799640874964.idx  image.cpp.ED94834955F4E4E1.idx  image.h.0D4B1896A06CA6C0.idx  math.h.5C7109B8BB06B1A1.idx  mathFunctions.h.9DB402B4173EDB0C.idx  raster.cpp.DC41884C84B0FC31.idx  raster.h.C28C421FE02790E6.idx
08-Bilinear/application/: application.cpp  image.cpp
08-Bilinear/gpu/: gpu.cpp  gpu.h  raster.cpp
08-Bilinear/slint/lib/cmake/Slint/: SlintConfig.cmake
08-Bilinear/ui/: main.slint
12-顶点对象/: AGENTS.md  CMakeLists.txt  main.cpp
12-顶点对象/application/: CMakeLists.txt  application.cpp  application.h  image.cpp
12-顶点对象/global/: base.h
12-顶点对象/gpu/: bufferObject.cpp  dataStructures.h  gpu.h
12-顶点对象/math/: matrix.h
12-顶点对象/ui/: app.slint
13-数据重构/: AGENTS.md  CMakeLists.txt  app.slint  main.cpp
13-数据重构/application/: application.cpp  application.h  image.cpp
13-数据重构/global/: base.h
13-数据重构/gpu/: bufferObject.cpp  bufferObject.h  gpu.cpp  gpu.h
13-数据重构/math/: matrix.h
14-绘制管线/: AGENTS.md  CMakeLists.txt  main.cpp
14-绘制管线/application/: application.cpp  image.cpp
14-绘制管线/global/: base.h
14-绘制管线/gpu/: gpu.cpp  gpu.h
14-绘制管线/ui/: appwindow.slint
16-透视校正/: AGENTS.md  CMakeLists.txt  app.slint  main.cpp
16-透视校正/application/: CMakeLists.txt  application.cpp  application.h
16-透视校正/global/: base.h
16-透视校正/gpu/: bufferObject.cpp  gpu.h  raster.cpp
16-透视校正/math/: matrix.h
17-面剔除/: AGENTS.md  CMakeLists.txt  app.slint  main.cpp
17-面剔除/application/: image.cpp
17-面剔除/global/: base.h
17-面剔除/gpu/: gpu.cpp  gpu.h
17-面剔除/math/: mathFunctions.h  matrix.h
20-高级纹理/: AGENTS.md  CMakeLists.txt  main.cpp
20-高级纹理/application/: CMakeLists.txt  application.cpp  application.h  image.cpp
20-高级纹理/global/: base.h
20-高级纹理/gpu/: gpu.h
20-高级纹理/math/: matrix.h
20-高级纹理/ui/: app.slint
22-光照/: AGENTS.md  CMakeLists.txt  main.cpp
22-光照/application/: application.cpp  application.h  camera.cpp  camera.h  image.cpp
22-光照/global/: base.h
22-光照/gpu/: bufferObject.cpp  gpu.cpp  gpu.h  shader.cpp  shader.h  texture.cpp
22-光照/gpu/shader/: defaultShader.cpp  defaultShader.h  lightShader.h
22-光照/math/: mathFunctions.h  matrix.h
22-光照/ui/: appwindow.slint
23-模型/: AGENTS.md  CMakeLists.txt  PLAN.md  main.cpp
23-模型/application/: CMakeLists.txt  application.cpp  application.h  camera.cpp  camera.h  image.cpp  model.h
23-模型/global/: base.h
23-模型/gpu/: clipper.cpp  dataStructures.h  frameBuffer.h  gpu.cpp  gpu.h  raster.cpp  shader.h  texture.h
23-模型/gpu/shader/: lightShader.cpp
23-模型/math/: mathFunctions.h  matrix.h  vector.h
23-模型/slint/include/slint/: slint_enums_internal.h
23-模型/ui/: app-window.slint
lectureCodes05-Triangles/: CMakeLists.txt  main.cpp
lectureCodes05-Triangles/gpu/: gpu.cpp  gpu.h  raster.cpp
lectureCodes05-Triangles/math/: mathFunctions.h
lectureCodes23-model/: CMakeLists.txt  CMakeSettings.json  main.cpp
lectureCodes23-model/application/: application.h  camera.h  image.cpp  image.h  model.cpp
lectureCodes23-model/gpu/: dataStructures.h  gpu.h  shader.h  texture.cpp
lectureCodes23-model/gpu/shader/: defaultShader.h  textureShader.h
lectureCodes23-model/math/: mathFunctions.h
(+872 files in other folders)
